<resources>
    <string name="app_name">ZHunger</string>
    <string name="facebook_app_id">270812644488332</string>
    <string name="fb_login_protocol_scheme">fb270812644488332</string>
    <string name="name">Name</string>
    <string name="food_title">Food title</string>
    <string name="food_description">Food description</string>
    <string name="address">Address</string>
    <string name="add_item">add_item</string>
    <string name="add_new_product">Add new Product</string>
    <string name="upload_pictures">Upload Pictures</string>
    <string name="_25th_aug_2021">25th Aug 2021</string>
    <string name="hi_there_nwelcome_to_the_chat">Hi there \nWelcome to the chat</string>
    <string name="yes_testing_chat_ui">Yes, testing Chat UI</string>
    <string name="wanna_request_this_food_npick_up_time_is_4_5_pm_at_the_mentioned_address">Want to request this food? \nPick up time is 4 to 5 PM at the mentioned address.</string>
    <string name="yes_means_a_lot_i_will_be_nto_collect">Yes, means a lot. I will be \nto collect</string>
    <string name="seen">Seen</string>
    <string name="i_will_wait_thank_you">I will wait, thank you!</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login">login</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="welcome_to_foodonation">WELCOME TO FOODONATION</string>
    <string name="logo">Logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_id">Email id</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="request_this">Request this</string>
    <string name="approx_location">APPROX.LOCATION</string>
    <string name="everything_in_this_section_is_given_away_for_free">Everything in this section is given away for free 💙</string>
    <string name="image">image</string>
    <string name="name_of_the_donor">Name of the donor</string>
    <string name="_3_000">3,000</string>
    <string name="eye">eye</string>
    <string name="add_button">add_Button</string>
    <string name="add_pictures_button">add_Pictures_Button</string>
    <string name="chat_pic">chat_Pic</string>
</resources>