<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat"
    android:orientation="vertical"
    >


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        tools:ignore="MissingConstraints"
        android:id="@+id/toolbar"
        android:background="@color/blue"
        app:titleMarginStart="20dp"
        app:titleTextColor="@color/white"
        app:subtitleTextColor="@color/white"
        />

<!--    1st text-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        >

        <TextView
            android:id="@+id/date"
            android:text="@string/_25th_aug_2021"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_marginStart="25dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/pic_chat"
            android:background="@color/blue"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hi_there_nwelcome_to_the_chat"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/pic_chat"
            android:contentDescription="@string/chat_pic"
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:layout_below="@+id/date"
            android:layout_marginStart="17dp"

            android:layout_marginTop="18dp"
            android:background="@drawable/account"

            >

        </ImageView>
    </RelativeLayout>

<!--    2nd text -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/chat2"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="17dp"
            android:layout_marginTop="4dp"
            android:background="#FFFDD0"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:text="@string/yes_testing_chat_ui"
            android:textColor="@color/black" />


<!--        <TextView-->
<!--            android:layout_width="58dp"-->
<!--            android:layout_height="20dp"-->
<!--            android:layout_below="@+id/chat2"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:layout_marginTop="0dp"-->
<!--            android:layout_marginRight="15dp"-->
<!--            android:paddingLeft="15dp"-->
<!--            android:text="Seen"-->
<!--            android:textColor="#9B9B9B" />-->

    </RelativeLayout>

<!--    3rd text -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/pic_chat2"
            android:background="@color/blue"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/wanna_request_this_food_npick_up_time_is_4_5_pm_at_the_mentioned_address"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/pic_chat2"
            android:contentDescription="@string/chat_pic"
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/account"
            >

        </ImageView>
    </RelativeLayout>

<!--    4th text-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/thanks"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="17dp"
            android:layout_marginTop="4dp"
            android:background="#FFFDD0"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:text="@string/yes_means_a_lot_i_will_be_nto_collect"
            android:textColor="@color/black" />


        <TextView
            android:layout_width="58dp"
            android:layout_height="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:paddingStart="15dp"
            android:text="@string/seen"
            android:textColor="#9B9B9B" />


    </RelativeLayout>


<!--    5th text-->

    <!--    3rd text -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/pic_chat3"
            android:background="@color/blue"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/i_will_wait_thank_you"
            android:textColor="@color/black" />



        <ImageView
            android:id="@+id/pic_chat3"
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/account"
            android:contentDescription="@string/chat_pic">
        </ImageView>
    </RelativeLayout>


</androidx.appcompat.widget.LinearLayoutCompat>